--- a/index.html
+++ b/index.html
@@ -94,6 +94,15 @@
             Now that I've gotten that out of my system, I'd like to say thanks for reading, and I hope you enjoy.
         </p>
     </div>
+    <div>
+        <h2>New</h2><hr />
+        <ul>
+            <li><a href="./essays/2022-05-05-principia_alchemica.html">Principia Alchemica: An Inquiry into the Alchemy of Isaac Newton</a></li>
+            <li><a href="./essays/2022-04-15-nominal_symmetrical_voice.html">Nevkóst: Nominal Symmetrical Voice</a></li>
+            <li><a href="./essays/2022-04-09-makhtl.html">Makhtl: Triconsonantal Roots & Logoconsonantal Writing Systems</a></li>
+        </ul>
+    </div>
+    <div>
     <div id="fiction">
         <h2><a href="./tags/fiction.html">Fiction</a></h2><hr />
         <ul>
@@ -119,7 +128,7 @@
     <div>
         <h2><a href="./tags/history.html">History</a></h2><hr />
         <ul>
-            <li>I've yet to upload anything to this section.</li>
+            <li><a href="./essays/2022-05-05-principia_alchemica.html">Principia Alchemica: An Inquiry into the Alchemy of Isaac Newton</a></li>
         </ul>
     </div>
     <div>
