--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div id="markdownBody">
                 <p id="intro">
-                    <img id="indimage" src="./images/mikʰiviːele.svg" style="width:216px;height:145px;float: right; margin: 10px;" />
+                    <img id="indimage" src="./images/m̥kʰʷiːele.svg" style="width:216px;height:145px;float: right; margin: 10px;" />
 
 <main>
     <div>
