--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     <div>
         <h2>New</h2><hr />
         <ul>
+            <li><a href="./conlangs/2022-06-06-mkv%C3%ADele.html">Mkvíele: The Language of Moonlight</a></li>
             <li><a href="./essays/2022-05-05-principia_alchemica.html">Principia Alchemica: An Inquiry into the Alchemy of Isaac Newton</a></li>
             <li><a href="./essays/2022-04-15-nominal_symmetrical_voice.html">Nevkóst: Nominal Symmetrical Voice</a></li>
             <li><a href="./essays/2022-04-09-makhtl.html">Makhtl: Triconsonantal Roots & Logoconsonantal Writing Systems</a></li>
@@ -105,6 +106,7 @@
     <div>
         <h2><a href="./tags/conlang.html">Conlangs</a></h2><hr />
         <ul>
+            <li><a href="./conlangs/2022-06-06-mkv%C3%ADele.html">Mkvíele: The Language of Moonlight</a></li>
             <li><a href="./essays/2022-04-15-nominal_symmetrical_voice.html">Nevkóst: Nominal Symmetrical Voice</a></li>
             <li><a href="./essays/2022-04-09-makhtl.html">Makhtl: Triconsonantal Roots & Logoconsonantal Writing Systems</a></li>
         </ul>
