--- a/index.html
+++ b/index.html
@@ -45,10 +45,18 @@
     <div>
         <p id="intro">
             Welcome to Kvelíere, the blog, portfolio, and playground of Collin Brown. You'll find an assortment of
-            links to my various projects; I mostly write fiction, but I'll also include introductions to a number of
-            constructed languages of mine, in addition to any worldbuilding notes I want to share. In addition, I'm likely
-            to publish articles discussing any of my honestly quite ecclectic interests. I'm especially fascinated by
+            links to my various projects; I write, program, study history and linguistics, and construct languages of my own.
+            I'm likely to publish articles discussing any of my honestly quite ecclectic interests. I'm especially fascinated by
             history, linguistics, programming, literature, and any combination thereof.
+        </p>
+        <p>
+            These days, I'm focused on computational linguistics—a subject I intend to pursue a Master's in. I'm compiling
+            a list of resources on the subject, and as I gather more experience I may try my hand at writing a few articles
+            on particular areas within the field. I'm also writing an essay on the history of the application of machine learning
+            to historical linguistics that likely won't be finished for quite some time—the topic is quite vast—but hopefully
+            I'll get that up here some day.
+            <a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>
+            <a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a>
         </p>
         <p>
             I program in C++ or C# for the most part, but I have experience with Python and a few other languages. I've
@@ -59,7 +67,7 @@
             my personality from this list than I'd like to admit.
         </p>
         <p>
-            As for linguistics, I've reached an intermediate level in Spanish (bienvenidos!) and working to do the same
+            As for languages, I've reached an intermediate level in Spanish (bienvenidos!) and working to do the same
             in Japanese (ようこそ), but I've also spent a little time—read, too little—with French and (even less with)
             Arabic. That's not to say those are the only languages with which I'm familiar in terms of phonology or
             grammar, only those which I've spent any respectable length of time trying to learn.
@@ -67,12 +75,10 @@
         <p>
             Constructing languages is a bit of an obsession of mine: most my work here goes to naturalistic languages,
             but I've toyed around with engineered and personal languages.
-            <a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>
-            Most recently, I've begun work on a fusional, non-rigidly head-initial language which is meant to phonaesthetically
+            My most fleshed-out language is a semi-fusional, non-rigidly head-initial language which is meant to phonaesthetically
             resemble Northern Sami, Icelandic, and Japanese; the grammar is influenced by Irish and Northern Sami; and the central
-            writing system is a logography in the vein of Chinese. By the time you're reading this, I'm likely to have some of that 
-            content published here.
-            <a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a>
+            writing system is a logography in the vein of Chinese. I'll admit to being a sucker for semi-fusional languages in general;
+            many of my conlangs fit this bill, though I have created more isolating or agglutinative languages in the past.
         </p>
         <p>
             I recently transitioned to this site, hence its sparseness. Expect more to arrive soon. This shift was honestly mostly
@@ -87,6 +93,7 @@
     <div>
         <h2>New</h2><hr />
         <ul>
+            <li><a href="./essays/2022-08-09-resources_on_computational_linguistics.html">Resources on Computational Linguistics</a></li>
             <li><a href="./conlangs/2022-06-06-mkv%C3%ADele.html">Mkvíele: The Language of Moonlight</a></li>
             <li><a href="./essays/2022-05-05-principia_alchemica.html">Principia Alchemica: An Inquiry into the Alchemy of Isaac Newton</a></li>
             <li><a href="./essays/2022-04-15-nominal_symmetrical_voice.html">Nevkóst: Nominal Symmetrical Voice</a></li>
@@ -104,8 +111,9 @@
         </ul>  
     </div>
     <div>
-        <h2><a href="./tags/conlang.html">Conlangs</a></h2><hr />
+        <h2><a href="./tags/linguistics.html">Linguistics</a></h2><hr />
         <ul>
+            <li><a href="./essays/2022-08-09-resources_on_computational_linguistics.html">Resources on Computational Linguistics</a></li>
             <li><a href="./conlangs/2022-06-06-mkv%C3%ADele.html">Mkvíele: The Language of Moonlight</a></li>
             <li><a href="./essays/2022-04-15-nominal_symmetrical_voice.html">Nevkóst: Nominal Symmetrical Voice</a></li>
             <li><a href="./essays/2022-04-09-makhtl.html">Makhtl: Triconsonantal Roots & Logoconsonantal Writing Systems</a></li>
@@ -114,6 +122,7 @@
     <div>
         <h2><a href="./tags/coding.html">Coding</a></h2><hr />
         <ul>
+            <li><a href="./essays/2022-08-09-resources_on_computational_linguistics.html">Resources on Computational Linguistics</a></li>
             <li><a href="./essays/2022-05-16-the_moonlight_tongue_devlog-1.html">The Moonlight Tongue: Devlog One</a></li>
         </ul>  
     </div>
@@ -136,8 +145,8 @@
                                                 and Hanzi (Chinese) characters (mostly in terms of its underlying structure). Various phonetic and semantic 
                                                 components combine to indicate the various words which compound to form the endonym for the language.
                                             </p></li>
-            <li id="fn2" role="doc-endnote"><p>The character above is a highly stylized rendering of the word "Kvelíere" in this language;
-                                            it translates to the "Black Dog," something of a reference to Samuel Johnson's use of the term:
+            <li id="fn2" role="doc-endnote"><p>The icon above is a highly stylized rendering of the word "Kvelíere" in one of my languages;
+                                            it translates to "Black Dog," something of a reference to Samuel Johnson's use of the term:
                                             "the black dog I hope always to resist, and in time to drive...."
                                             <a style="font-style: italic;">Letter to Mrs. Thrale</a>, 28 June, 1783.</p></li>
                                             <br>
