--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <div>
         <h2>New</h2><hr />
         <ul>
+            <li><a href="./essays/2022-11-22-multi-clong.html">Multi-Clong: A Collaborative Constructed Language Song Cover</a></li>
             <li><a href="./essays/2022-08-09-resources_on_computational_linguistics.html">Resources on Computational Linguistics</a></li>
             <li><a href="./conlangs/2022-06-06-mkv%C3%ADele.html">Mkvíele: The Language of Moonlight</a></li>
             <li><a href="./essays/2022-05-05-principia_alchemica.html">Principia Alchemica: An Inquiry into the Alchemy of Isaac Newton</a></li>
@@ -113,6 +114,7 @@
     <div>
         <h2><a href="./tags/linguistics.html">Linguistics</a></h2><hr />
         <ul>
+            <li><a href="./essays/2022-11-22-multi-clong.html">Multi-Clong: A Collaborative Constructed Language Song Cover</a></li>
             <li><a href="./essays/2022-08-09-resources_on_computational_linguistics.html">Resources on Computational Linguistics</a></li>
             <li><a href="./conlangs/2022-06-06-mkv%C3%ADele.html">Mkvíele: The Language of Moonlight</a></li>
             <li><a href="./essays/2022-04-15-nominal_symmetrical_voice.html">Nevkóst: Nominal Symmetrical Voice</a></li>
