Added "The Hunting Tongue - Part One"

--- a/index.html
+++ b/index.html
@@ -93,11 +93,9 @@
     <div>
         <h2>New</h2><hr />
         <ul>
-            <li><a href="./essays/2022-11-22-multi-clong.html">Multi-Clong: A Collaborative Constructed Language Song Cover</a></li>
+            <li><a href="./essays/2023-05-27-the_hunting_tongue-pt1.html">The Hunting Tongue: A Hybrid Sign-Spoken Constructed Language</a></li>
             <li><a href="./essays/2022-08-09-resources_on_computational_linguistics.html">Resources on Computational Linguistics</a></li>
-            <li><a href="./conlangs/2022-06-06-mkv%C3%ADele.html">Mkvíele: The Language of Moonlight</a></li>
             <li><a href="./essays/2022-05-05-principia_alchemica.html">Principia Alchemica: An Inquiry into the Alchemy of Isaac Newton</a></li>
-            <li><a href="./essays/2022-04-15-nominal_symmetrical_voice.html">Nevkóst: Nominal Symmetrical Voice</a></li>
             <li><a href="./essays/2022-04-09-makhtl.html">Makhtl: Triconsonantal Roots & Logoconsonantal Writing Systems</a></li>
         </ul>
     </div>
@@ -114,6 +112,7 @@
     <div>
         <h2><a href="./tags/linguistics.html">Linguistics</a></h2><hr />
         <ul>
+            <li><a href="./essays/2023-05-27-the_hunting_tongue-pt1.html">The Hunting Tongue: A Hybrid Sign-Spoken Constructed Language</a></li>
             <li><a href="./essays/2022-11-22-multi-clong.html">Multi-Clong: A Collaborative Constructed Language Song Cover</a></li>
             <li><a href="./essays/2022-08-09-resources_on_computational_linguistics.html">Resources on Computational Linguistics</a></li>
             <li><a href="./conlangs/2022-06-06-mkv%C3%ADele.html">Mkvíele: The Language of Moonlight</a></li>
