--- a/fiction/proto-tapestry/2021-08-13-proto-tapestry-nineteen.html
+++ b/fiction/proto-tapestry/2021-08-13-proto-tapestry-nineteen.html
@@ -5,9 +5,9 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Kvelíere - Chapter Nineteen: Blade and Star</title>
-        <script src="../js/setup.js"></script>
-        <script src="../js/footnotes.js"></script>
-        <link rel="stylesheet" href="../css/default.css" />
+        <script src="../../js/setup.js"></script>
+        <script src="../../js/footnotes.js"></script>
+        <link rel="stylesheet" href="../../css/default.css" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-255PS393VY"></script>
         <script>
@@ -25,12 +25,12 @@
             
             <div id="sidebarouter">
                 <div id="sidebar">
-                    <a id="logo" href="../" title="Home">
-                        <img src="../images/kvele.svg" alt="Kvelíere Logo">
+                    <a id="logo" href="../../" title="Home">
+                        <img src="../../images/kvele.svg" alt="Kvelíere Logo">
                     </a>
                     <div id="sidebar-links">
-                        <a class="link" href="../about.html" title="Who am I?">ABOUT</a>
-                        <a class="link" href="../contact.html" title="How can you contact me?">CONTACT</a>
+                        <a class="link" href="../../about.html" title="Who am I?">ABOUT</a>
+                        <a class="link" href="../../contact.html" title="How can you contact me?">CONTACT</a>
                         <a class="link" href="https://www.patreon.com/collinbrown" title="How can you support me?">PATREON</a>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
 <p>— <em>I’m afraid I’m not seeing what you must want me to.</em></p>
 <p>— <em>Along the edge.</em> Khal flicked a hand at the coin.</p>
 <p>I dragged a finger over the surface and found a series of words indented into the metal, only barely legible even with the light of the hearth to aid me. The script was ancient—drawn from the tongues of Kyer, in the east, and brought here by the early settlers of Alvyria. It read:</p>
-<p><img src="../images/metir_keviv_coin-silver.png" id="id" class="class" width="530" height="530" /></p>
+<p><img src="../../images/metir_keviv_coin-silver.png" id="id" class="class" width="530" height="530" /></p>
 <p>— <em>You wouldn’t be able to translate it, would you?</em></p>
 <p>— <em>‘Metir Keviv, the Heart of Alvyria,’</em> Khal said. <em>Have you ever been?</em></p>
 <p>The coin shone with flecks of red in the grooves, and a coat of arms upon the upturned face wore the blade and star of the old kingdom of the Valkons which had once ruled over all the realms. I kneaded my brow a moment, then shook my head.</p>
