--- a/fiction/proto-tapestry/2021-08-15-proto-tapestry-twenty-one.html
+++ b/fiction/proto-tapestry/2021-08-15-proto-tapestry-twenty-one.html
@@ -5,9 +5,9 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Kvelíere - Chapter Twenty-One: The Songs of Thelair</title>
-        <script src="../js/setup.js"></script>
-        <script src="../js/footnotes.js"></script>
-        <link rel="stylesheet" href="../css/default.css" />
+        <script src="../../js/setup.js"></script>
+        <script src="../../js/footnotes.js"></script>
+        <link rel="stylesheet" href="../../css/default.css" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-255PS393VY"></script>
         <script>
@@ -25,12 +25,12 @@
             
             <div id="sidebarouter">
                 <div id="sidebar">
-                    <a id="logo" href="../" title="Home">
-                        <img src="../images/kvele.svg" alt="Kvelíere Logo">
+                    <a id="logo" href="../../" title="Home">
+                        <img src="../../images/kvele.svg" alt="Kvelíere Logo">
                     </a>
                     <div id="sidebar-links">
-                        <a class="link" href="../about.html" title="Who am I?">ABOUT</a>
-                        <a class="link" href="../contact.html" title="How can you contact me?">CONTACT</a>
+                        <a class="link" href="../../about.html" title="Who am I?">ABOUT</a>
+                        <a class="link" href="../../contact.html" title="How can you contact me?">CONTACT</a>
                         <a class="link" href="https://www.patreon.com/collinbrown" title="How can you support me?">PATREON</a>
                     </div>
                 </div>
