--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
     <div id="fiction">
         <h2><a href="./tags/fiction.html">Fiction</a></h2><hr />
         <ul>
-            <li><a href="./fiction/2022-01-10-tapestry-main.html">Tapestry: Main Page</a></li>
-            <li><a href="./fiction/2021-07-25-tapestry-one.html">Tapestry: Chapter One</a></li>
-            <li><a href="./fiction/2021-08-06-tapestry-twelve.html">Tapestry: Chapter Twelve</a></li>
-            <li><a href="./fiction/2021-08-16-tapestry-twenty-three.html">Tapestry: Chapter Twenty-Three</a></li>
+            <li><a href="./fiction/proto-tapestry/2022-01-10-proto-tapestry-main.html">Proto-Tapestry: Main Page</a></li>
+            <li><a href="./fiction/proto-tapestry/2021-07-25-proto-tapestry-one.html">Proto-Tapestry: Chapter One</a></li>
+            <li><a href="./fiction/proto-tapestry/2021-08-06-proto-tapestry-twelve.html">Proto-Tapestry: Chapter Twelve</a></li>
+            <li><a href="./fiction/proto-tapestry/2021-08-16-proto-tapestry-twenty-three.html">Proto-Tapestry: Chapter Twenty-Three</a></li>
         </ul>  
     </div>
     <div>
