--- a/index.html
+++ b/index.html
@@ -45,40 +45,38 @@
     <div>
         <p id="intro">
             Welcome to Kvelíere, the blog, portfolio, and playground of Collin Brown. You'll find an assortment of
-            links to my various projects; I write, program, study history and linguistics, and construct languages of my own.
+            links to my various projects; I write, program, study computational linguistics, construct languages of my own, and
+            generally nerd-out about a lot of stuff such as history, mathematics, and a great many other things.
             I'm likely to publish articles discussing any of my honestly quite ecclectic interests. I'm especially fascinated by
-            history, linguistics, programming, literature, and any combination thereof.
+            linguistics, history, programming, literature, and any combination thereof.
         </p>
         <p>
-            These days, I'm focused on computational linguistics—a subject I intend to pursue a Master's in. I'm compiling
-            a list of resources on the subject, and as I gather more experience I may try my hand at writing a few articles
-            on particular areas within the field. I'm also writing an essay on the history of the application of machine learning
-            to historical linguistics that likely won't be finished for quite some time—the topic is quite vast—but hopefully
-            I'll get that up here some day.
+            These days, I'm pursing a graduate degree in computational linguistics at Indiana University. In particular, my 
+            interest is in developing technologies for marginalized languages. I'm studying Tibetan and Basque, and I have
+            experience with Spanish and Japanese as well. I've also toyed around with writing an essay on the history of the
+            application of computational and statistical methods to historical linguistics, but that likely won't be finished
+            for quite some time—the topic is quite vast—but hopefully I'll get that up here some day.
             <a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>
             <a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a>
         </p>
         <p>
-            I program in C++ or C# for the most part, but I have experience with Python and a few other languages. I've
-            some experience with Unity, but these days I've been working with OpenGL, coding the systems you'd find in the
-            former from scratch: a better way to learn how they all really work under the hood, I've found. I
-            particularly enjoy coding the sorts of games I like to play: roguelikes (of the Nethack variety), sims (in the
-            vein of Dwarf Fortress), and grand strategy games (such as Crusader Kings 2). You can likely glean more of
+            I program in C++ and Python, for the most part, but I have experience with C#, Javascript, and a few other languages.
+            Much of my programming experience is in the realm of graphics programming and neural networks. On a less formal level,
+            I particularly enjoy coding games, usually similar to those I like to play: roguelikes (of the Nethack variety), sims
+            (in the vein of Dwarf Fortress), and grand strategy games (such as Crusader Kings 2). You can likely glean more of
             my personality from this list than I'd like to admit.
         </p>
         <p>
-            As for languages, I've reached an intermediate level in Spanish (bienvenidos!) and working to do the same
-            in Japanese (ようこそ), but I've also spent a little time—read, too little—with French and (even less with)
-            Arabic. That's not to say those are the only languages with which I'm familiar in terms of phonology or
-            grammar, only those which I've spent any respectable length of time trying to learn.
+            As already mentioned, I've reached an intermediate level in Spanish (bienvenidos) and have studied Japanese for some
+            years (ようこそ). I am taking classes in (Lhasa) Tibetan (བཀྲ་ཤིས་བདེ་ལེགས), and my central comp-ling project right now is working
+            on a neural word segmenter for the written language. In addition, I'm studying Basque (kaixo) with some of my fellow
+            grad students in the linguistics department and those adjacent.
         </p>
         <p>
             Constructing languages is a bit of an obsession of mine: most my work here goes to naturalistic languages,
             but I've toyed around with engineered and personal languages.
             My most fleshed-out language is a semi-fusional, non-rigidly head-initial language which is meant to phonaesthetically
-            resemble Northern Sami, Icelandic, and Japanese; the grammar is influenced by Irish and Northern Sami; and the central
-            writing system is a logography in the vein of Chinese. I'll admit to being a sucker for semi-fusional languages in general;
-            many of my conlangs fit this bill, though I have created more isolating or agglutinative languages in the past.
+            resemble a blend of Northern Sami, (Modern) Greek, and Basque. 
         </p>
         <p>
             I recently transitioned to this site, hence its sparseness. Expect more to arrive soon. This shift was honestly mostly
@@ -141,9 +139,9 @@
     </div>
     <section class="footnotes footnotes-end-of-document" role="doc-endnotes"><hr />
         <ol>
-            <li id="fn1" role="doc-endnote"><p>The image above features the characters for "Mkvíele," the name of the language which I am spending most of 
-                                                my time with now. This script is fairly heavily influenced by Blackletter, the Tibetan Script (Uchen), 
-                                                and Hanzi (Chinese) characters (mostly in terms of its underlying structure). Various phonetic and semantic 
+            <li id="fn1" role="doc-endnote"><p>The image above features the characters for "Mkvíele," the name of the language which I made some years ago.
+                                                This script is fairly heavily influenced by Blackletter, the Tibetan Script (Uchen), and Hanzi (Chinese)
+                                                characters (mostly in terms of its underlying structure). Various phonetic and semantic 
                                                 components combine to indicate the various words which compound to form the endonym for the language.
                                             </p></li>
             <li id="fn2" role="doc-endnote"><p>The icon above is a highly stylized rendering of the word "Kvelíere" in one of my languages;
