--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                     <div id="sidebar-links">
                         <a class="link" href="./about.html" title="Who am I?">ABOUT</a>
                         <a class="link" href="./contact.html" title="How can you contact me?">CONTACT</a>
-                        <a class="link" href="https://www.patreon.com/collinbrown" title="How can you support me?">PATREON</a>
+                        <!--<a class="link" href="https://www.patreon.com/collinbrown" title="How can you support me?">PATREON</a>-->
                     </div>
                 </div>
             </div>
@@ -39,7 +39,7 @@
             
             <div id="markdownBody">
                 <p id="intro">
-                    <p>My name is Collin Brown, a recent graduate from Chapman University where I studied creative writing and history. I was the founder and editor-in-chief of Ouroboros Magazine, a speculative fiction magazine at Chapman; we published student and faculty works of science fiction and fantasy (and other related subgenres), as well as artwork that fell under that same domain. My short stories have been published in Palomar College’s Bravura and Chapman’s The Underground <a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>, and I’ve received an honorable mention for my piece, “Heart of Ash,” from the L. Ron Hubbard Writers of the Future contest <a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a>. I’ve worked as the lead editor for Supercali Magazine, writing about and doing research on California’s wildlife and conservation efforts, and I’ve some experience with a handful of coding languages—mostly C++ and C#—having worked on little games and simulations over the years. I’ve studied under or met with such writers as Martin Dugard, Martin J. Smith, and (just recently) Daniel Levin Becker of Oulipo. Their influence has shaped me as a writer, and I owe much of my style to their brilliant insights into the craft. If you wish to contact me, go ahead and shoot an email, and I’ll be sure to get back to you as quickly as possible.</p>
+                    <p>My name is Elyá, a graduate student at Indiana University finishing up an MS in Computational Linguistics. I completed my undergraduate at Chapman University where I studied creative writing and history. I was the founder and editor-in-chief of Ouroboros Magazine, a speculative fiction magazine at Chapman; we published student and faculty works of science fiction and fantasy (and other related subgenres), as well as artwork that fell under that same domain. My short stories have been published in Palomar College’s Bravura and Chapman’s The Underground <a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>, and I’ve received an honorable mention for my piece, “Heart of Ash,” from the L. Ron Hubbard Writers of the Future contest <a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a>. I’ve worked as the lead editor for Supercali Magazine, writing about and doing research on California’s wildlife and conservation efforts, and I’ve some experience with a handful of coding languages—mostly C++ and Python—having worked on research and personal projects over the years. I’ve studied under or met with such writers as Martin Dugard, Martin J. Smith, and Daniel Levin Becker of Oulipo. Their influence has shaped me as a writer, and I owe much of my style to their brilliant insights into the craft. If you wish to contact me, go ahead and shoot an email, and I’ll be sure to get back to you as quickly as possible.</p>
 <section class="footnotes footnotes-end-of-document" role="doc-endnotes">
 <hr />
 <ol>
@@ -52,7 +52,7 @@
         </main>
 
         <footer>
-            © 2022 Collin Brown
+            © 2022 Elyá
         </footer>
     </body>
 </html>
