--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                     <div id="sidebar-links">
                         <a class="link" href="./about.html" title="Who am I?">ABOUT</a>
                         <a class="link" href="./contact.html" title="How can you contact me?">CONTACT</a>
-                        <a class="link" href="https://www.patreon.com/collinbrown" title="How can you support me?">PATREON</a>
+                        <!--<a class="link" href="https://www.patreon.com/collinbrown" title="How can you support me?">PATREON</a>-->
                     </div>
                 </div>
             </div>
@@ -41,14 +41,14 @@
                 <p id="intro">
                     <p>If you want to contact me, you can do so via:</p>
 <ul>
-<li><em>Email</em> : CollinBrownWriting@gmail.com</li>
+<li><em>Email</em> : elyavyale@gmail.com</li>
 </ul>
                 </p>
             </div>
         </main>
 
         <footer>
-            © 2022 Collin Brown
+            © 2022 Elyá
         </footer>
     </body>
 </html>
