--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div id="sidebar-links">
                         <a class="link" href="./about.html" title="Who am I?">ABOUT</a>
                         <a class="link" href="./contact.html" title="How can you contact me?">CONTACT</a>
-                        <a class="link" href="https://www.patreon.com/collinbrown" title="How can you support me?">PATREON</a>
+                        <!--<a class="link" href="https://www.patreon.com/collinbrown" title="How can you support me?">PATREON</a>-->
                     </div>
                 </div>
             </div>
@@ -44,7 +44,7 @@
 <main>
     <div>
         <p id="intro">
-            Welcome to Kvelíere, the blog, portfolio, and playground of Collin Brown. You'll find an assortment of
+            Welcome to Kvelíere, the blog, portfolio, and playground of Elyá. You'll find an assortment of
             links to my various projects; I write, program, study computational linguistics, construct languages of my own, and
             generally nerd-out about a lot of stuff such as history, mathematics, and a great many other things.
             I'm likely to publish articles discussing any of my honestly quite ecclectic interests. I'm especially fascinated by
@@ -158,7 +158,7 @@
         </main>
 
         <footer>
-            © 2022 Collin Brown
+            © 2022 Elyá
         </footer>
     </body>
 </html>
