--- a/index.html
+++ b/index.html
@@ -51,38 +51,35 @@
             linguistics, history, programming, literature, and any combination thereof.
         </p>
         <p>
-            These days, I'm pursing a graduate degree in computational linguistics at Indiana University. In particular, my 
-            interest is in developing technologies for marginalized languages. I'm studying Tibetan and Basque, and I have
-            experience with Spanish and Japanese as well. I've also toyed around with writing an essay on the history of the
-            application of computational and statistical methods to historical linguistics, but that likely won't be finished
-            for quite some time—the topic is quite vast—but hopefully I'll get that up here some day.
+            These days, I'm in my last semester of a master's degree in computational linguistics at Indiana University. In
+            particular, my  interest is in developing technologies for marginalized languages. I've written papers on natural
+            language processing pipelines for Standard and Classical Tibetan and recently worked with the Belgian National
+            Institute of Criminalistics and Criminology (NICC) on a project employing large language models (LLMs) and knowledge
+            graphs.
+            
+            In addition to Tibetan, I have studied Spanish and Japanese. During the summer of 2024, I travelled to Nepal,
+            to Kathmandu, to study Tibetan at the Rangjung Yeshe Institute via the Foreign Language and Area Studies (FLAS)
+            Fellowship. I also received FLAS to fund my ongoing research on digital technologies for Tibetan.
             <a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>
             <a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a>
         </p>
         <p>
             I program in C++ and Python, for the most part, but I have experience with C#, Javascript, and a few other languages.
-            Much of my programming experience is in the realm of graphics programming and neural networks. On a less formal level,
+            Much of my programming experience is in the realm of graphics programming and machine learning. On a less formal level,
             I particularly enjoy coding games, usually similar to those I like to play: roguelikes (of the Nethack variety), sims
             (in the vein of Dwarf Fortress), and grand strategy games (such as Crusader Kings 2). You can likely glean more of
             my personality from this list than I'd like to admit.
         </p>
         <p>
-            As already mentioned, I've reached an intermediate level in Spanish (bienvenidos) and have studied Japanese for some
-            years (ようこそ). I am taking classes in (Lhasa) Tibetan (བཀྲ་ཤིས་བདེ་ལེགས), and my central comp-ling project right now is working
-            on a neural word segmenter for the written language. In addition, I'm studying Basque (kaixo) with some of my fellow
-            grad students in the linguistics department and those adjacent.
-        </p>
-        <p>
             Constructing languages is a bit of an obsession of mine: most my work here goes to naturalistic languages,
-            but I've toyed around with engineered and personal languages.
-            My most fleshed-out language is a semi-fusional, non-rigidly head-initial language which is meant to phonaesthetically
-            resemble a blend of Northern Sami, (Modern) Greek, and Basque. 
+            but I've toyed around with engineered and personal languages. I recently put together an auxiliary language which
+            attempts to combine phonological minimalism with a simple grammar while drawing on the twenty most-spoken languages
+            around the world for its lexicon; it is known as <a href="https://www.kveliere.com/pdfs/mitaeme-primer.pdf">Mitaeme</a>.
         </p>
         <p>
-            I recently transitioned to this site, hence its sparseness. Expect more to arrive soon. This shift was honestly mostly
-            motivated by my desire to have more control over the site as a whole, inspired in no small part by a number of personal
-            and professional blogs such as <a href="https://s.ai/">S.ai</a>, <a href="https://www.gwern.net">Gwern.net</a>, and
-            <a href="https://www.lingweenie.org/">Lingweenie.org</a>.
+            I have written up this site myself in order to have more control over its aesthetic and function. This was honestly
+            inspired in no small part by a number of personal and professional blogs such as <a href="https://s.ai/">S.ai</a>,
+            <a href="https://www.gwern.net">Gwern.net</a>, and <a href="https://www.lingweenie.org/">Lingweenie.org</a>.
         </p>
         <p>
             Now that I've gotten that out of my system, I'd like to say thanks for reading, and I hope you enjoy.
@@ -91,10 +88,10 @@
     <div>
         <h2>New</h2><hr />
         <ul>
+            <li><a href="./pdfs/a_construction_morphology_analysis_of_the_tibetan_case_system.pdf">A Construction Morphology Analysis of the Lhasa Tibetan Case System</a></li>
+            <li><a href="./pdfs/mitaeme-primer.pdf">A Primer on Mitaeme</a></li>
             <li><a href="./essays/2023-05-27-the_hunting_tongue-pt1.html">The Hunting Tongue: A Hybrid Sign-Spoken Constructed Language</a></li>
-            <li><a href="./essays/2022-08-09-resources_on_computational_linguistics.html">Resources on Computational Linguistics</a></li>
             <li><a href="./essays/2022-05-05-principia_alchemica.html">Principia Alchemica: An Inquiry into the Alchemy of Isaac Newton</a></li>
-            <li><a href="./essays/2022-04-09-makhtl.html">Makhtl: Triconsonantal Roots & Logoconsonantal Writing Systems</a></li>
         </ul>
     </div>
     <div>
@@ -110,9 +107,9 @@
     <div>
         <h2><a href="./tags/linguistics.html">Linguistics</a></h2><hr />
         <ul>
+            <li><a href="./pdfs/a_construction_morphology_analysis_of_the_tibetan_case_system.pdf">A Construction Morphology Analysis of the Lhasa Tibetan Case System</a></li>
+            <li><a href="./pdfs/mitaeme-primer.pdf">A Primer on Mitaeme</a></li>
             <li><a href="./essays/2023-05-27-the_hunting_tongue-pt1.html">The Hunting Tongue: A Hybrid Sign-Spoken Constructed Language</a></li>
-            <li><a href="./essays/2022-11-22-multi-clong.html">Multi-Clong: A Collaborative Constructed Language Song Cover</a></li>
-            <li><a href="./essays/2022-08-09-resources_on_computational_linguistics.html">Resources on Computational Linguistics</a></li>
             <li><a href="./conlangs/2022-06-06-mkv%C3%ADele.html">Mkvíele: The Language of Moonlight</a></li>
             <li><a href="./essays/2022-04-15-nominal_symmetrical_voice.html">Nevkóst: Nominal Symmetrical Voice</a></li>
             <li><a href="./essays/2022-04-09-makhtl.html">Makhtl: Triconsonantal Roots & Logoconsonantal Writing Systems</a></li>
@@ -122,8 +119,7 @@
         <h2><a href="./tags/coding.html">Coding</a></h2><hr />
         <ul>
             <li><a href="./essays/2022-08-09-resources_on_computational_linguistics.html">Resources on Computational Linguistics</a></li>
-            <li><a href="./essays/2022-05-16-the_moonlight_tongue_devlog-1.html">The Moonlight Tongue: Devlog One</a></li>
-        </ul>  
+        </ul>
     </div>
     <div>
         <h2><a href="./tags/history.html">History</a></h2><hr />
