--- a/index.html
+++ b/index.html
@@ -44,18 +44,23 @@
 <main>
     <div>
         <p id="intro">
-            Welcome to Kvelíere, the blog, portfolio, and playground of Elyá. You'll find an assortment of
+            Welcome to Kvelíere, the blog, portfolio, and playground of Elya. You'll find an assortment of
             links to my various projects; I write, program, study computational linguistics, construct languages of my own, and
             generally nerd-out about a lot of stuff such as history, mathematics, and a great many other things.
             I'm likely to publish articles discussing any of my honestly quite ecclectic interests. I'm especially fascinated by
             linguistics, history, programming, literature, and any combination thereof.
         </p>
         <p>
-            These days, I'm in my last semester of a master's degree in computational linguistics at Indiana University. In
+            These days, I'm busy finishing up a master's degree in computational linguistics at Indiana University. In
             particular, my  interest is in developing technologies for marginalized languages. I've written papers on natural
             language processing pipelines for Standard and Classical Tibetan and recently worked with the Belgian National
             Institute of Criminalistics and Criminology (NICC) on a project employing large language models (LLMs) and knowledge
             graphs.
+
+            While I've done work with LLMs and generative AI, I think that such tools need to be heavily regulated.
+            They are quickly diluting public sources of information and generally muddying the waters so that good knowledge 
+            is increasingly hard to find. Unless you like living in a world where your politics, your art, and the validity of
+            your health insurance claims are determined by AI, we need to clamp down on its usage today.
             
             In addition to Tibetan, I have studied Spanish and Japanese. During the summer of 2024, I travelled to Nepal,
             to Kathmandu, to study Tibetan at the Rangjung Yeshe Institute via the Foreign Language and Area Studies (FLAS)
@@ -77,7 +82,7 @@
             around the world for its lexicon; it is known as <a href="https://www.kveliere.com/pdfs/mitaeme-primer.pdf">Mitaeme</a>.
         </p>
         <p>
-            I have written up this site myself in order to have more control over its aesthetic and function. This was honestly
+            I have written up this site myself in order to have more control over its aesthetic and function. This was
             inspired in no small part by a number of personal and professional blogs such as <a href="https://s.ai/">S.ai</a>,
             <a href="https://www.gwern.net">Gwern.net</a>, and <a href="https://www.lingweenie.org/">Lingweenie.org</a>.
         </p>
