Replaced Index Image

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             
             <div id="markdownBody">
                 <p id="intro">
-                    <img id="indimage" src="./images/m̥kʰʷiːele.svg" style="width:216px;height:145px;float: right; margin: 10px;" />
+                    <img id="indimage" src="./images/nien_lo-fi_meli.svg" style="width:240px;height:207px;float: right; margin: 10px;" />
 
 <main>
     <div>
@@ -140,10 +140,10 @@
     </div>
     <section class="footnotes footnotes-end-of-document" role="doc-endnotes"><hr />
         <ol>
-            <li id="fn1" role="doc-endnote"><p>The image above features the characters for "Mkvíele," the name of the language which I made some years ago.
-                                                This script is fairly heavily influenced by Blackletter, the Tibetan Script (Uchen), and Hanzi (Chinese)
-                                                characters (mostly in terms of its underlying structure). Various phonetic and semantic 
-                                                components combine to indicate the various words which compound to form the endonym for the language.
+            <li id="fn1" role="doc-endnote"><p>The stamp pictured above says "Learn Mitaeme!" in, well, Mitaeme—a little auxiliary language
+                                            I've been working on. You can <a href="./pdfs/mitaeme-primer.pdf">read the primer</a> or
+                                            <a href="https://github.com/merzsielen/Mitaeme">check out the GitHub repository</a> if you're
+                                            interested! <em>I nin mei cihuan mi te eme!</em>
                                             </p></li>
             <li id="fn2" role="doc-endnote"><p>The icon above is a highly stylized rendering of the word "Kvelíere" in one of my languages;
                                             it translates to "Black Dog," something of a reference to Samuel Johnson's use of the term:
