--- a/essays/2022-04-09-makhtl.html
+++ b/essays/2022-04-09-makhtl.html
@@ -5164,7 +5164,7 @@ The accusative is used to mark direct objects of transitive verbs.</span><span c
         </main>
 
         <footer>
-            © 2022 Elyá
+            © 2025 Elya
         </footer>
     </body>
 </html>
