--- a/fiction/proto-tapestry/2021-08-15-proto-tapestry-twenty-two.html
+++ b/fiction/proto-tapestry/2021-08-15-proto-tapestry-twenty-two.html
@@ -32,6 +32,7 @@
                         <a class="link" href="../../about.html" title="Who am I?">ABOUT</a>
                         <a class="link" href="../../contact.html" title="How can you contact me?">CONTACT</a>
                         <a class="link" href="../../pdfs/cv.pdf" title="What have I done?">CV</a>
+                        <a class="link" href="https://github.com/merzsielen" title="What have I coded?">GITHUB</a>
                     </div>
                 </div>
             </div>
